--- a/package.json
+++ b/package.json
@@ -4,20 +4,46 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
+    "commit": "git-cz",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.0.3",
     "postcss-preset-env": "^7.0.1",
+    "prettier": "2.4.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,md,html}": [
+      "prettier --write"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
